# ptyx-python

./: Cargo.toml  README.md  main.py  pyproject.toml
.github/workflows/: CI.yml
python_src/ptyx/: __init__.py  ptyx.pyi
src/: ansi.rs  error.rs  lib.rs  mux.rs
src/console/: mod.rs  unix.rs  windows.rs
src/session/: mod.rs  windows.rs
src/session/unix/: mod.rs  pty.rs
