[package]
name = "ptyx-python"
version = "0.1.0"
edition = "2021"
description = "Cross-platform PTY/TTY management library"
license = "MIT"

[lib]
name = "ptyx_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
thiserror = "2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["ioctl", "process", "signal", "term", "fs"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Pipes",
    "Win32_System_JobObjects",
] }
